# Nanma-NX-Media-Suite

./: .gitignore  CMakeLists.txt  PHASE_1_SUMMARY.md  PHASE_SUMMARY.md  README.md  how phase-13-cli-adapters  nanma_nx_media_suite_official_roadmap_v_1.md
nx-cli/: AUDIO_IMPLEMENTATION.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  METAFIX_IMPLEMENTATION.md  README.md  VIDEO_IMPLEMENTATION.md
nx-cli/include/: argument_parser.h  audio_argument_parser.h  audio_command.h  audio_types.h  batch_argument_parser.h  batch_artifact_loader.h  batch_command.h  batch_introspection_command.h  batch_introspection_types.h  batch_types.h  cli_execution.h  cli_types.h  convert_command.h  metafix_argument_parser.h  metafix_command.h  metafix_types.h  monitor_argument_parser.h  monitor_command.h  monitor_types.h  nx_cli.h  video_argument_parser.h  video_command.h  video_types.h
nx-cli/src/: CliApp.cpp  CliApp.h  CommandId.h  CommandRegistry.cpp  CommandRegistry.h  argument_parser.cpp  audio_argument_parser.cpp  audio_command.cpp  batch_argument_parser.cpp  batch_artifact_loader.cpp  batch_command.cpp  batch_introspection_command.cpp  cli_execution.cpp  convert_command.cpp  main.cpp  metafix_argument_parser.cpp  metafix_command.cpp  monitor_argument_parser.cpp  monitor_command.cpp  nx_cli.cpp  video_argument_parser.cpp  video_command.cpp
nx-cli/src/adapters/: MonitorQueryAdapter.cpp  MonitorQueryAdapter.h
nx-cli/src/dto/: MonitorStatusDto.cpp  MonitorStatusDto.h
nx-cli/src/error/: CliError.cpp  CliError.h
nx-cli/src/serialize/: MonitorStatusJsonSerializer.cpp  MonitorStatusJsonSerializer.h  MonitorStatusTextSerializer.cpp  MonitorStatusTextSerializer.h
nx-cli/tests/: CMakeLists.txt  monitor_status_json_test.cpp  monitor_status_text_test.cpp  test_audio_cli.cpp  test_batch_artifacts_commands.cpp  test_batch_cli.cpp  test_batch_introspection_foundation.cpp  test_batch_introspection_golden.cpp  test_batch_policies_command.cpp  test_batch_status_job_commands.cpp  test_cli.cpp  test_metafix_cli.cpp  test_monitor_cli.cpp  test_video_cli.cpp
nx-cli/tests/golden/: inspect_jobs_basic.json  inspect_plan_basic.json  monitor_status.json  monitor_status.txt
nx-core/: CMakeLists.txt
nx-core/docs/: NEVER_BREAK_RULES.md  PHASE_0_INVARIANTS.md  README.md  api_contract_rules.md  result_system.md
nx-core/include/: api_contract.h  determinism_guards.h  deterministic_numeric_policy.h  error_system.h  identity.h  logical_clock.h  nx_batchflow_adapter.h  nx_batchflow_audio_adapter.h  nx_batchflow_convert_adapter.h  nx_batchflow_dag.h  nx_batchflow_jobid.h  nx_batchflow_logical_clock.h  nx_batchflow_meta_adapter.h  nx_batchflow_preset.h  nx_batchflow_replay.h  nx_batchflow_retry_policy.h  nx_batchflow_scheduler.h  nx_batchflow_video_adapter.h  nx_core.h  nx_identity.h  result.h
nx-core/src/: api_contract.cpp  determinism_guards.cpp  deterministic_numeric_policy.cpp  error_system.cpp  identity.cpp  logical_clock.cpp  nx_core.cpp  nx_identity.cpp  result.cpp
nx-core/tests/: CMakeLists.txt  test_api_contract.cpp  test_batchflow_workflow.cpp  test_determinism_critical.cpp  test_determinism_guards.cpp  test_deterministic_numeric_policy.cpp  test_error_system.cpp  test_identity.cpp  test_law_violations.cpp  test_logical_clock.cpp  test_nx_identity.cpp  test_replay_proof.cpp  test_result.cpp
nx-engine-audio/: CMakeLists.txt  README.md
nx-engine-audio/docs/: determinism_audit.md
nx-engine-audio/include/nx/audio/: AudioEngine.h  Errors.h  (+5 more)
nx-engine-audio/src/: AudioEngine.cpp
nx-engine-audio/tests/: AudioEngine_determinism_tests.cpp  audio_equality_proof.cpp  audio_error_determinism_proof.cpp  audio_ordering_stability_proof.cpp  audio_replayability_proof.cpp  comprehensive_determinism_proof.cpp  deterministic_api_tests.cpp  equality_proof.cpp  error_determinism_proof.cpp  minimal_determinism_proof.cpp  ordering_stability_proof.cpp  replayability_proof.cpp
nx-engine-batch/: CMakeLists.txt
nx-engine-batch/src/: BatchEngineImpl.cpp  BatchPlanSession.cpp  DeterministicExecutionEngine.cpp  ExecutionCoordinator.cpp  ExecutionGraph.cpp  ExecutionInput.cpp  ExecutionPersistence.cpp  ExecutionState.cpp  JobExecutionSpec.cpp  ReplayDriver.cpp  RetryEngine.cpp  SessionTypes.cpp
nx-engine-batch/tests/: CMakeLists.txt  test_batch_engine.cpp  test_deterministic_execution_engine.cpp  test_execution_interfaces.cpp  test_execution_persistence.cpp  test_execution_result_envelope.cpp  test_execution_state.cpp  test_replay_driver.cpp  test_retry_engine.cpp  test_session_architecture.cpp
nx-engine-convert/: CMakeLists.txt  README.md
nx-engine-convert/docs/: determinism_audit.md
nx-engine-convert/src/: TranscodeEngine.cpp
nx-engine-convert/tests/: TranscodeEngine_determinism_tests.cpp  determinism_proof.cpp  equality_proof.cpp  error_determinism_proof.cpp  minimal_determinism.cpp  ordering_stability_proof.cpp  replayability_proof.cpp
nx-engine-meta/: CMakeLists.txt  README.md
nx-engine-meta/src/: MetaEngine.cpp
nx-engine-meta/tests/: MetaEngine_determinism_tests.cpp  comprehensive_determinism_tests.cpp  deterministic_api_tests.cpp  minimal_determinism_proof.cpp
nx-engine-monitor/: CMakeLists.txt
nx-engine-monitor/src/: ExecutionBoundaryObserver.cpp  NullMonitorEngine.cpp  RealMonitorEngine.cpp
nx-engine-monitor/tests/: CMakeLists.txt  test_execution_boundary_observer.cpp  test_null_monitor_engine.cpp  test_real_monitor_engine.cpp
nx-engine-video/: CMakeLists.txt  README.md
nx-engine-video/src/: VideoEngine.cpp
nx-engine-video/tests/: VideoEngine_determinism_tests.cpp  VideoEngine_simple_test.cpp  VideoEngine_skeleton_tests.cpp  deterministic_api_tests.cpp  minimal_determinism_proof.cpp
nx-ui-qt/: CMakeLists.txt
nx-ui-qt/src/: main.cpp
nx-ui-qt/src/adapters/: QtCliAdapter.cpp  QtCliAdapter.h
nx-ui-qt/src/app/: QtApp.cpp  QtApp.h
nx-ui-qt/src/commands/: CommandDescriptor.cpp  CommandDescriptor.h  CommandGroup.h  CommandPresentationMetadata.h  CommandPresentationRegistry.cpp  CommandPresentationRegistry.h
nx-ui-qt/src/ui/: OutputView.cpp  OutputView.h  UIStateStore.cpp  UIStateStore.h
(+145 files in other folders)
